WIP near-rewrite